--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll --testMatch **/src/**/*.test.js",
+    "test": "react-scripts test --watchAll=false",
     "eslint": "eslint src --fix",
     "stylelint": "stylelint **/*.scss",
     "eject": "react-scripts eject",
