fix: air-bnb error -test

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "extends": [
     "airbnb-base",
     "airbnb/rules/react",
+    "plugin:jest/recommended",
     "plugin:react-hooks/recommended",
     "plugin:prettier/recommended"
   ],
