--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,8 @@
 {
   "parser": "babel-eslint",
   "extends": [
-    "airbnb-base",
-    "airbnb/rules/react",
+    "eslint-config-airbnb-base",
+    "eslint-config-airbnb/rules/react",
     "plugin:jest/recommended",
     "plugin:react-hooks/recommended",
     "plugin:prettier/recommended"
