--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 {
   "parser": "babel-eslint",
   "extends": [
-    "airbnb",
+    "airbnb-base",
+    "airbnb-base/legacy",
+    "airbnb/rules/react",
     "plugin:jest/recommended",
     "plugin:react-hooks/recommended",
     "plugin:prettier/recommended"
