--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "yup": "^0.32.8"
   },
   "scripts": {
-    "start": "serve -s build",
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
     "eslint": "eslint src --fix",
@@ -63,9 +62,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^7.2.0",
+    "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
