--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.10.8",
-    "@date-io/moment": "^2.10.8",
+    "@date-io/date-fns": "^1.3.13",
+    "@date-io/moment": "1.x",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
@@ -30,9 +30,10 @@
     "react-hook-form": "^6.15.1",
     "react-idle-timer": "^4.5.5",
     "react-query": "^3.6.0",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "react-select": "^4.1.0",
+    "react-select-material-ui": "^6.8.0",
     "react-show-more-text": "^1.4.6",
     "styled-components": "^5.2.1",
     "yup": "^0.32.8"
