update: orcid env variable

--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=https://jsonplaceholder.typicode.com
+REACT_APP_BACKEND_URL=http://localhost:9000
+REACT_APP_ORCID=https://sandbox.orcid.org/oauth/authorize?client_id=APP-YB0Q0XIMHL5MYS0B&response_type=token&scope=openid&redirect_uri=
