--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "better-docs": "^2.3.2",
     "date-fns": "^2.17.0",
     "history": "^5.0.0",
+    "html-react-parser": "^1.2.4",
     "jsdoc": "^3.6.6",
     "localforage": "^1.9.0",
     "lodash": "^4.17.20",
