--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "history": "^5.0.0",
     "html-react-parser": "^1.2.4",
     "jsdoc": "^3.6.6",
+    "jwt-decode": "^3.1.2",
     "localforage": "^1.9.0",
     "lodash": "^4.17.20",
     "material-ui-popup-state": "^1.7.1",
