--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "material-ui-popup-state": "^1.7.1",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^3.6.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
     "react-idle-timer": "^4.5.5",
+    "react-lines-ellipsis": "^0.14.1",
     "react-query": "^3.6.0",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
