--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
     "react-idle-timer": "^4.5.5",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-lines-ellipsis": "^0.14.1",
     "react-query": "^3.6.0",
     "react-quill": "^1.3.5",
