--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "better-docs": "^2.3.2",
     "date-fns": "^2.17.0",
+    "formik": "^2.2.6",
     "history": "^5.0.0",
     "html-react-parser": "^1.2.4",
     "jsdoc": "^3.6.6",
