--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.17.0",
     "focus-formik-error": "^1.0.7",
     "formik": "^2.2.6",
+    "formik-error-focus": "^1.1.0",
     "history": "^5.0.0",
     "html-react-parser": "^1.2.4",
     "jsdoc": "^3.6.6",
