--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-select-material-ui": "^6.8.0",
     "react-show-more-text": "^1.4.6",
     "react-slick": "^0.28.1",
+    "reactour": "^1.18.6",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
     "yup": "^0.32.8"
