--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "formik-error-focus": "^1.1.0",
     "history": "^5.0.0",
     "html-react-parser": "^1.2.4",
+    "javascript-time-ago": "^2.3.8",
     "jsdoc": "^3.6.6",
     "jwt-decode": "^3.1.2",
     "localforage": "^1.9.0",
@@ -47,6 +48,8 @@
     "react-select-material-ui": "^6.8.0",
     "react-show-more-text": "^1.4.6",
     "react-slick": "^0.28.1",
+    "react-time-ago": "^7.1.1",
+    "react-timeago": "^6.2.1",
     "reactour": "^1.18.6",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
