fix contribution hierarchy

--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "html-react-parser": "^1.2.4",
     "javascript-time-ago": "^2.3.8",
     "jsdoc": "^3.6.6",
+    "just-debounce-it": "^1.5.0",
     "jwt-decode": "^3.1.2",
     "localforage": "^1.9.0",
     "lodash": "^4.17.20",
+    "material-react-toastify": "^1.0.1",
     "material-ui-popup-state": "^1.7.1",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
