--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "reactour": "^1.18.6",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
+    "uuid": "^8.3.2",
     "yup": "^0.32.8"
   },
   "scripts": {
