--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-slick": "^0.28.1",
     "react-time-ago": "^7.1.1",
     "react-timeago": "^6.2.1",
+    "react-uuid": "^1.0.2",
     "reactour": "^1.18.6",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
