--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "eslint-plugin-react-hooks": "^4.0.3",
     "husky": "^4.3.7",
     "lint-staged": "^10.5.3",
-    "node-sass": "^4.0.0",
+    "node-sass": "npm:sass@^1.54.7",
     "prettier": "2.2.1",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
